refactor: Resolve most warnings in common, some in core-web (#682)